--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" id="Nav">
+    <nav class="navbar navbar-expand-lg border" id="Nav">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Erica Diana</a>
         <button
@@ -171,28 +171,43 @@
     </div>
 
     <footer
-      class="text-center text-success border border-top-dark d-flex flex-column justify-content-start"
+      class="text-center text-success border d-md-flex justify-content-center gap-5"
       id="Contatti"
     >
-      <h3 class="mb-2">Contatti</h3>
+      <div class="d-flex flex-column">
+        <h3 class="mb-2">Contatti</h3>
 
-      <a
-        class="text-success text-decoration-none"
-        href="mailto:ericadiana2003@gmail.com"
-      >
-        <i class="fa-solid fa-envelope"></i>
-        ericadiana2003@gmail.com</a
-      >
-      <a
-        class="text-success text-decoration-none"
-        href="https://github.com/EricaDianaa"
-        ><i class="fa-brands fa-github"></i> Github</a
-      >
-      <a
-        class="text-success text-decoration-none mb-3"
-        href="https://www.linkedin.com/in/erica-diana-full-stack-developer/"
-        ><i class="fa-brands fa-linkedin"></i> Linkedin</a
-      >
+        <a
+          class="text-black text-decoration-none"
+          href="mailto:ericadiana2003@gmail.com"
+        >
+          <i class="fa-solid fa-envelope"></i>
+          ericadiana2003@gmail.com</a
+        >
+        <a
+          class="text-black text-decoration-none"
+          href="https://github.com/EricaDianaa"
+          ><i class="fa-brands fa-github"></i> Github</a
+        >
+        <a
+          class="text-black text-decoration-none mb-3"
+          href="https://www.linkedin.com/in/erica-diana-full-stack-developer/"
+          ><i class="fa-brands fa-linkedin"></i> Linkedin</a
+        >
+      </div>
+      <div class="d-flex flex-column">
+        <h3>Curriculum</h3>
+        <a
+          href="/Curriculum/Curriculum  Erica Diana.pdf"
+          download=""
+          class="text-black text-center"
+          ><i
+            class="fa-solid fa-download text-success"
+            style="font-size: 1.5rem;"
+          ></i>
+          Scarica curriculum
+        </a>
+      </div>
     </footer>
 
     <!-- Modal -->
