--- a/index.html
+++ b/index.html
@@ -49,40 +49,40 @@
           id="navbarNavDropdown"
         >
           <ul
-            class="navbar-nav gap-3 text-center align-items-center justify-content-center"
+            class="navbar-nav gap-3 text-center align-items-center justify-content-center container"
           >
-            <li class="nav-item">
+            <li class="nav-item d-flex d-lg-block">
               <a
                 href="#ChiSono"
-                class="border border-white text-decoration-none bg-success text-white rounded-pill my-auto p-2 Navli"
+                class="border border-white text-decoration-none bg-success text-white w-50 mx-auto rounded-pill my-auto p-2 Navli"
                 >Chi sono</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex d-lg-block">
               <a
                 href="#Progetti"
-                class="border border-white text-decoration-none bg-success text-white rounded-pill my-auto p-2 Navli"
+                class="border border-white text-decoration-none bg-success text-white w-50 mx-auto rounded-pill my-auto p-2 Navli"
                 >Progetti</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex d-lg-block">
               <a
                 href="#Skils"
-                class="border border-white text-decoration-none bg-success text-white rounded-pill my-auto p-2 Navli"
+                class="border border-white text-decoration-none bg-success text-white w-50 mx-auto rounded-pill my-auto p-2 Navli"
                 >Skils</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex d-lg-block">
               <a
                 href="#Contatti"
-                class="border border-white text-decoration-none bg-success text-white rounded-pill my-auto p-2 Navli"
+                class="border border-white text-decoration-none bg-success text-white w-50 mx-auto rounded-pill my-auto p-2 Navli"
                 >Contatti</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex d-lg-block">
               <button
                 id="buttonLigth"
-                class="border border-white bg-success btn rounded-pill Navli"
+                class="border border-white bg-success btn rounded-pill mx-auto Navli"
               >
                 <i
                   id="i"
@@ -111,13 +111,13 @@
         <div>
           <h3 class="text-center text-success">Chi sono</h3>
           <p>
-            Sono Erica, ho appena conseguito la certificazionecome
-            Full-Stack-Developer presso un corso Epicodedi 6 mesi da cui ho
-            appreso varie conoscenzeinformatiche, la capacità di lavorare sia in
-            team chein autonomia e capacità di problem-solving. Mireputo una
-            ragazza onesta e affidabile. Sono disponibile e cerco di completare
-            al massimo dellemie capacità, tutti i miei obbiettivi rispettando i
-            tempistabiliti.
+            Sono Erica, ho appena conseguito la certificazione come
+            Full-Stack-Developer presso un corso Epicode di 6 mesi da cui ho
+            appreso varie conoscenze informatiche, la capacità di lavorare sia
+            in team che in autonomia e capacità di problem-solving. Mi reputo
+            una ragazza onesta e affidabile. Sono disponibile e cerco di
+            completare al massimo delle mie capacità, tutti i miei obbiettivi
+            rispettando i tempi stabiliti.
           </p>
         </div>
       </div>
@@ -162,7 +162,10 @@
 
       <i class="devicon-jquery-plain colored"></i>
 
-      <i class="devicon-microsoftsqlserver-plain-wordmark text-white"></i>
+      <i
+        id="sql"
+        class="devicon-microsoftsqlserver-plain-wordmark text-dark"
+      ></i>
 
       <i class="devicon-git-plain colored"></i>
 
@@ -177,20 +180,15 @@
       <div class="d-flex flex-column">
         <h3 class="mb-2">Contatti</h3>
 
-        <a
-          class="text-black text-decoration-none"
-          href="mailto:ericadiana2003@gmail.com"
-        >
+        <a class="text-decoration-none" href="mailto:ericadiana2003@gmail.com">
           <i class="fa-solid fa-envelope"></i>
           ericadiana2003@gmail.com</a
         >
-        <a
-          class="text-black text-decoration-none"
-          href="https://github.com/EricaDianaa"
+        <a class="text-decoration-none" href="https://github.com/EricaDianaa"
           ><i class="fa-brands fa-github"></i> Github</a
         >
         <a
-          class="text-black text-decoration-none mb-3"
+          class="text-decoration-none mb-3"
           href="https://www.linkedin.com/in/erica-diana-full-stack-developer/"
           ><i class="fa-brands fa-linkedin"></i> Linkedin</a
         >
@@ -200,7 +198,7 @@
         <a
           href="/Curriculum/Curriculum  Erica Diana.pdf"
           download=""
-          class="text-black text-center"
+          class="text-center"
           ><i
             class="fa-solid fa-download text-success"
             style="font-size: 1.5rem;"
