--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       href="https://fonts.googleapis.com/css2?family=Lemon&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg border" id="Nav">
@@ -142,35 +147,37 @@
 
     <div id="Skils" class="text-center mt-4 mb-3">
       <h3 class="text-center text-success">Le mie competenze</h3>
-      <i class="devicon-html5-plain colored"></i>
+      <i class="devicon-html5-plain colored" title="HTML"></i>
 
-      <i class="devicon-css3-plain colored"></i>
+      <i class="devicon-css3-plain colored" title="CSS"></i>
 
-      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-javascript-plain colored" title="Javascript"></i>
 
-      <i class="devicon-bootstrap-plain colored"></i>
+      <i class="devicon-bootstrap-plain colored" title="Bootstrap"></i>
 
-      <i class="devicon-sass-original colored"></i>
+      <i class="devicon-sass-original colored" title="SASS"></i>
 
-      <i class="devicon-typescript-plain colored"></i>
+      <i class="devicon-typescript-plain colored" title="Typescript"></i>
 
-      <i class="devicon-angularjs-plain colored"></i>
+      <i class="devicon-angularjs-plain colored" title="Angular"></i>
 
-      <i class="devicon-csharp-plain-wordmark colored"></i>
+      <i class="devicon-csharp-plain-wordmark colored" title="C#"></i>
 
-      <i class="devicon-dot-net-plain-wordmark colored"></i>
+      <i class="devicon-dot-net-plain-wordmark colored" title=".NET"></i>
 
-      <i class="devicon-jquery-plain colored"></i>
+      <i class="devicon-jquery-plain colored" title="Jquery"></i>
 
       <i
         id="sql"
         class="devicon-microsoftsqlserver-plain-wordmark text-dark"
+        title="SQL SERVER"
       ></i>
 
-      <i class="devicon-git-plain colored"></i>
+      <i class="devicon-git-plain colored" title="Git"></i>
 
-      <i class="devicon-visualstudio-plain colored"></i>
-      <i class="devicon-vscode-plain-wordmark colored"></i>
+      <i class="devicon-visualstudio-plain colored" title="Visual studio"></i>
+
+      <i class="devicon-vscode-plain colored" title="Visual studio code"></i>
     </div>
 
     <footer
