--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <a
           href="/Curriculum/Curriculum  Erica Diana.pdf"
           download=""
-          class="text-center"
+          class="text-center text-decoration-none"
           ><i
             class="fa-solid fa-download text-success"
             style="font-size: 1.5rem;"
