--- a/index.html
+++ b/index.html
@@ -56,38 +56,38 @@
           <ul
             class="navbar-nav gap-3 text-center align-items-center justify-content-center container"
           >
-            <li class="nav-item d-flex d-lg-block">
+            <li class="nav-item d-flex d-lg-block Navli">
               <a
                 href="#ChiSono"
                 class="border border-white text-decoration-none bg-success text-white w-50 mx-auto rounded-pill my-auto p-2 Navli"
                 >Chi sono</a
               >
             </li>
-            <li class="nav-item d-flex d-lg-block">
+            <li class="nav-item d-flex d-lg-block Navli">
               <a
                 href="#Progetti"
                 class="border border-white text-decoration-none bg-success text-white w-50 mx-auto rounded-pill my-auto p-2 Navli"
                 >Progetti</a
               >
             </li>
-            <li class="nav-item d-flex d-lg-block">
+            <li class="nav-item d-flex d-lg-block Navli">
               <a
                 href="#Skils"
                 class="border border-white text-decoration-none bg-success text-white w-50 mx-auto rounded-pill my-auto p-2 Navli"
                 >Skils</a
               >
             </li>
-            <li class="nav-item d-flex d-lg-block">
+            <li class="nav-item d-flex d-lg-block Navli">
               <a
                 href="#Contatti"
                 class="border border-white text-decoration-none bg-success text-white w-50 mx-auto rounded-pill my-auto p-2 Navli"
                 >Contatti</a
               >
             </li>
-            <li class="nav-item d-flex d-lg-block">
+            <li class="nav-item d-flex d-lg-block Navli">
               <button
                 id="buttonLigth"
-                class="border border-white bg-success btn rounded-pill mx-auto Navli"
+                class="border border-white bg-success btn rounded-pill mx-auto"
               >
                 <i
                   id="i"
