--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
     <div class="text-center mt-4">
       <a
-        href="/Curriculum/Curriculum  Erica Diana.pdf"
+        href="/Curriculum/Curriculum Diana Erica ..pdf"
         download=""
         class="text-success text-center"
         ><i
@@ -203,7 +203,7 @@
       <div class="d-flex flex-column">
         <h3>Curriculum</h3>
         <a
-          href="/Curriculum/Curriculum  Erica Diana.pdf"
+          href="/Curriculum/Curriculum Diana Erica ..pdf"
           download=""
           class="text-center text-decoration-none"
           ><i
