--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <a
                 href="#Skils"
                 class="border border-white text-decoration-none bg-success text-white w-50 mx-auto rounded-pill my-auto p-2 Navli"
-                >Skils</a
+                >Skills</a
               >
             </li>
             <li class="nav-item d-flex d-lg-block Navli">
